--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "da1fac80",
    "metadata": {},
    "outputs": [],
@@ -159,8 +159,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a2f00990",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Linear Dependence and Span:\n",
+    "vectors = np.random.rand(3, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "cb3f1b3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.63950099, 0.23674669, 0.75182933],\n",
+       "       [0.84546017, 0.16769257, 0.67191132],\n",
+       "       [0.91890554, 0.34327424, 0.94104654]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ab6d0f4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_vector = np.random.rand(3, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "cbfa6a4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.59783401],\n",
+       "       [0.61468102],\n",
+       "       [0.79489764]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "88c23d0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The vectors span the space.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Determine if the vectors span the space that contains the target vector\n",
+    "# Hint: You can use NumPy functions to check linear dependence.\n",
+    "# Using Numpy: \n",
+    "\n",
+    "\n",
+    "augmented_matrix = np.column_stack((vectors, target_vector))\n",
+    "rank = np.linalg.matrix_rank(augmented_matrix)\n",
+    "# Determine if the vectors span the space based on the rank\n",
+    "if rank == np.linalg.matrix_rank(vectors):\n",
+    "    print(\"The vectors span the space.\")\n",
+    "else:\n",
+    "    print(\"The vectors do not span the space.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0483bb9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "(3, 3)\n",
+      "There are linearly dependent vectors in the set.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Linear Dependence: \n",
+    "vectors = np.array([[1, 2, 3],\n",
+    "                    [2, 4, 6],\n",
+    "                    [3, 6, 10]])\n",
+    "rank = np.linalg.matrix_rank(vectors)\n",
+    "print(rank)\n",
+    "if rank < min(vectors.shape):\n",
+    "    print(\"There are linearly dependent vectors in the set.\")\n",
+    "else:\n",
+    "    print(\"There are no linearly dependent vectors in the set.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "22526fe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3]\n",
+      " [ 2  4  6]\n",
+      " [ 3  6 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write code to eliminate linear dependence by removing redundant vectors\n",
+    "# Hint: You can use NumPy functions to find linearly independent vectors.\n",
+    "d, indices = np.unique(vectors, axis=0, return_index=True)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "8a433c19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ca6d8a6",
    "metadata": {},
    "outputs": [],
    "source": []
