Added some more linear algebra like Orthogonal, span, independency , and so on

--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "da1fac80",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cb3f1b3d",
+   "id": "c6e1e521",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ab6d0f4c",
+   "id": "e3953618",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "cbfa6a4a",
+   "id": "f3cb9e77",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "88c23d0e",
+   "id": "73303065",
    "metadata": {},
    "outputs": [
     {
@@ -242,8 +242,6 @@
     "# Determine if the vectors span the space that contains the target vector\n",
     "# Hint: You can use NumPy functions to check linear dependence.\n",
     "# Using Numpy: \n",
-    "\n",
-    "\n",
     "augmented_matrix = np.column_stack((vectors, target_vector))\n",
     "rank = np.linalg.matrix_rank(augmented_matrix)\n",
     "# Determine if the vectors span the space based on the rank\n",
@@ -256,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0483bb9b",
+   "id": "0e283da2",
    "metadata": {},
    "outputs": [
     {
@@ -285,14 +283,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "22526fe0",
+   "execution_count": 38,
+   "id": "de3bbd6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write code to eliminate linear dependence by removing redundant vectors\n",
+    "# Hint: You can use NumPy functions to find linearly independent vectors.\n",
+    "_,indices = np.unique(vectors, axis=0, return_index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "1afc1f4b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Linearly Independent Vectors:\n",
       "[[ 1  2  3]\n",
       " [ 2  4  6]\n",
       " [ 3  6 10]]\n"
@@ -300,34 +311,188 @@
     }
    ],
    "source": [
-    "# Write code to eliminate linear dependence by removing redundant vectors\n",
-    "# Hint: You can use NumPy functions to find linearly independent vectors.\n",
-    "d, indices = np.unique(vectors, axis=0, return_index=True)\n",
-    "print(d)"
+    "linear_independence_vectors = vectors[indices]\n",
+    "print(\"Linearly Independent Vectors:\")\n",
+    "print(linear_independence_vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "8a433c19",
+   "execution_count": 46,
+   "id": "f8e6a5b1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 2]\n"
+      "Diagonal: \n",
+      " [[2 0 0]\n",
+      " [0 3 0]\n",
+      " [0 0 4]]\n"
      ]
     }
    ],
    "source": [
-    "print(indices)"
+    "# Diagonal : Used mostly in scaling and transoforming Data without altering its direction. \n",
+    "# used in PCA principal componenent analysis transofrm data into a new coordinate system. \n",
+    "diagonal_matrix = np.diag([2,3,4])\n",
+    "print(\"Diagonal: \\n\", diagonal_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "0b1040ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Symmetric: \n",
+      " [[1 2 3]\n",
+      " [2 4 5]\n",
+      " [3 5 6]]\n",
+      "Transpose: \n",
+      " [[1 2 3]\n",
+      " [2 4 5]\n",
+      " [3 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "symmetric_matrix = np.array([[1, 2, 3],\n",
+    "                              [2, 4, 5],\n",
+    "                              [3, 5, 6]])\n",
+    "print(\"Symmetric: \\n\", symmetric_matrix)\n",
+    "print(\"Transpose: \\n\", symmetric_matrix.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "020544dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Matrix: \n",
+      " [[0.76629016 0.87386531 0.45166929]\n",
+      " [0.9735538  0.09869962 0.58959548]\n",
+      " [0.37622978 0.72341477 0.33868179]]\n",
+      "Orthogonal Matrix: \n",
+      " (array([[-0.59181253,  0.49390913, -0.63703351],\n",
+      "       [-0.75188404, -0.62311959,  0.21538889],\n",
+      "       [-0.29056552,  0.60644517,  0.74013237]]), array([[-1.29481909, -0.8015745 , -0.80902023],\n",
+      "       [ 0.        ,  0.80881978,  0.06108704],\n",
+      "       [ 0.        ,  0.        ,  0.0899332 ]]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Orthogonal: is a square matrix whose rows/columns are orthogonal. i.e: dot products of \n",
+    "# rows/columns are zero and their magnitude are one. \n",
+    "# Case: Orthogonal transform preserves length and angles. \n",
+    "# App: Rotation, reflections and solve linear systems of equations. \n",
+    "random_matrix = np.random.rand(3,3)\n",
+    "print(\"Random Matrix: \\n\", random_matrix)\n",
+    "# You can create an orthogonal matrix using special algorithms or \n",
+    "#by performing QR decomposition on a matrix.\n",
+    "print(\"Orthogonal Matrix: \\n\", np.linalg.qr(random_matrix))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "d3ed6e6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "V1: \n",
+      " [1. 0. 0.]\n",
+      "V2: \n",
+      " [0. 1. 0.]\n",
+      "V3: \n",
+      " [0. 0. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Orthonormal : used in PCA and SVD \n",
+    "# Create orthogonal vectors\n",
+    "v1 = np.array([1, 0, 0], dtype=float)\n",
+    "v2 = np.array([0, 1, 0], dtype=float)\n",
+    "v3 = np.array([0, 0, 1], dtype=float)\n",
+    "\n",
+    "# # Normalize them to make them orthonormal\n",
+    "v1 /= np.linalg.norm(v1)\n",
+    "v2 /= np.linalg.norm(v2)\n",
+    "v3 /= np.linalg.norm(v3)\n",
+    "\n",
+    "print(\"V1: \\n\", v1)\n",
+    "print(\"V2: \\n\", v2)\n",
+    "print(\"V3: \\n\", v3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "c39d2a46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Norm:  1.0\n",
+      "Norm:  1.0\n",
+      "Norm:  1.0\n",
+      "Orthonormal Vectors:\n",
+      "[1. 0. 0.]\n",
+      "[0. 1. 0.]\n",
+      "[0. 0. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use Gram-schmit : \n",
+    "# Define a set of orthogonal vectors\n",
+    "v1 = np.array([1, 0, 0], dtype=float)\n",
+    "v2 = np.array([0, 1, 0], dtype=float)\n",
+    "v3 = np.array([0, 0, 1], dtype=float)\n",
+    "\n",
+    "# Initialize a list to store orthonormal vectors\n",
+    "orthonormal_vectors = []\n",
+    "\n",
+    "# Gram-Schmidt process to create orthonormal vectors\n",
+    "for v in [v1, v2, v3]:\n",
+    "    for u in orthonormal_vectors:\n",
+    "        v -= np.dot(v, u) * u\n",
+    "    # Normalize v to make it unit length\n",
+    "    norm = np.linalg.norm(v)\n",
+    "    print(\"Norm: \", norm)\n",
+    "    if norm > 0:\n",
+    "        orthonormal_vectors.append(v / norm)\n",
+    "    else:\n",
+    "        # Handle the case where v is a zero vector\n",
+    "        orthonormal_vectors.append(v)\n",
+    "\n",
+    "# Now, orthonormal_vectors contains the orthonormal set\n",
+    "print(\"Orthonormal Vectors:\")\n",
+    "for vector in orthonormal_vectors:\n",
+    "    print(vector)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ca6d8a6",
+   "id": "d4df9eeb",
    "metadata": {},
    "outputs": [],
    "source": []
